--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"gravatar": "^1.8.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.12",
-		"normalize-url": "^5.0.0"
+		"normalize-url": "^5.0.0",
+		"request": "^2.88.2"
 	},
 	"devDependencies": {
 		"eslint": "^6.8.0",
