react and concurrently setup

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server",
-		"server": "nodemon server"
+		"server": "nodemon server",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"repository": {
 		"type": "git",
@@ -30,6 +32,7 @@
 		"request": "^2.88.2"
 	},
 	"devDependencies": {
+		"concurrently": "^5.2.0",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.1.0"
 	}
